refactor(framework): 优化Bean拷贝工具类并更新相关实体类结构